# bigdata

big/: .env.production  README.md  docker-compose.yml  nginx.conf
big/backend_bigdata/: .env  Dockerfile  Readme.md  __init__.py  alembic.ini  pyproject.toml  test.py
big/backend_bigdata/alembic/: README  env.py  script.py.mako
big/backend_bigdata/alembic/versions/: 5f82a895b767_create_prediction_table.py  adb8b44ec9e6_add_prediction_table.py  fdcd5fd0c717_create_prediction_table.py
big/backend_bigdata/app/: kafka_producer.py  main.py  model_loader.py  prometheus_metrics.py
big/backend_bigdata/app/api/: __init__.py  predict.py
big/backend_bigdata/app/api/test/: predict_test.http
big/backend_bigdata/app/db/: __init__.py  base.py  crud.py  models.py  session.py
big/fluent-bit/: extract_container.lua  fluent-bit.conf  parsers.conf
big/frontend_bigdata/: .env  Dockerfile  README.md  eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts
big/frontend_bigdata/src/: App.tsx  index.css  styles.css
big/frontend_bigdata/src/api/: prediction.ts
big/frontend_bigdata/src/components/: Navbar.tsx  PredictForm.tsx  ResultCard.tsx
big/frontend_bigdata/src/pages/: Dashboard.tsx  History.tsx  Login.tsx  MachineDetail.tsx  Machines.tsx  Predict.tsx
